--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,19 @@
   <groupId>org.programmingwithjava21</groupId>
   <artifactId>programming-with-java21</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <configuration>
+    <release>17</release>
+  </configuration>
+   <dependencies>
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.11.0</version>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.15.2</version>
+	</dependency>
+  </dependencies>
 </project>
